--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,8 +1,14 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
+  ],
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
   ],
   "outputDirectory": "dist"
