--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,13 +1,14 @@
 {
+  "public": true,
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server.js"
+      "dest": "src/server.ts"
     }
   ],
   "builds": [
     {
-      "src": "server.js",
+      "src": "src/server.ts",
       "use": "@vercel/node"
     }
   ],
