--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,13 +3,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/server.js"
-    }
-  ],
-  "builds": [
-    {
-      "src": "dist/server.js",
-      "use": "@vercel/node"
+      "dest": "server.js"
     }
   ],
   "outputDirectory": "dist"
