--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon src/server.ts",
     "build": "tsc",
     "start:build": "node --enable-source-maps dist/server.js",
-    "vercel-build": "node dist/server.js",
+    "vercel-build": "tsc && node dist/server.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
