--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,8 +3,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "./server.js"
+      "dest": "dist/server.js"
     }
-  ],
-  "outputDirectory": "dist"
+  ]
 }
