--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,10 +1,4 @@
 {
   "public": true,
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/server.js"
-    }
-  ],
-  "outputDirectory": "."
+  "outputDirectory": "dist"
 }
