--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,12 @@
   "name": "api-playground",
   "version": "0.0.1",
   "description": "A simple api playground to test ideas out",
-  "main": "src/server.ts",
+  "main": "build/server.js",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "start:build": "node --enable-source-maps dist/server.js",
+    "vercel:install_and_build": "npm ci && npm run build",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,6 +31,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "<=4.9.0"
   }
