--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,4 +1,14 @@
 {
-  "public": true,
-  "outputDirectory": "dist"
+  "builds": [
+    {
+      "src": "dist/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "dist/**"
+        ]
+      }
+    }
+  ],
+  "installCommand": "npm run vercel:install_and_build"
 }
