--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,14 +1,9 @@
 {
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "dist/**"
-        ]
-      }
+  "functions": {
+    "dist/index.js": {
+      "includeFiles": [
+        "dist/**"
+      ]
     }
-  ],
-  "installCommand": "npm run vercel:install_and_build"
+  }
 }
