--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,9 +1,7 @@
 {
   "functions": {
     "dist/index.js": {
-      "includeFiles": [
-        "dist/**"
-      ]
+      "includeFiles": "dist/**"
     }
   }
 }
