--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,8 +4,17 @@
   },
   "builds": [
     {
-      "src": "dist/**",
-      "use": "@vercel/node"
+      "src": "dist/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["dist/**"]
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/index.js"
     }
   ]
 }
