reset vercel config

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,19 +2,5 @@
   "github": {
     "enabled": false
   },
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["dist/**"]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ]
+  "buildsCommand": ""
 }
