--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "api-playground",
   "version": "0.0.1",
   "description": "A simple api playground to test ideas out",
-  "main": "build/server.js",
+  "main": "src/server.ts",
   "scripts": {
     "start": "nodemon src/server.ts",
     "--build": "rimraf dist && tsc",
