--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,3 +1,15 @@
 {
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
+    }
+  ],
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "installCommand": "npm ci"
 }
