--- a/api/vercel.json
+++ b/api/vercel.json
@@ -5,5 +5,11 @@
       "dest": "src/server.ts"
     }
   ],
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "installCommand": "npm ci"
 }
