go back to old-style routes and builds

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,8 +1,15 @@
 {
-  "functions": {
-    "src/server.ts": {
-      "includeFiles": "src/**"
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.ts"
     }
-  },
+  ],
+  "builds": [
+    {
+      "src": "src/server.ts",
+      "use": "@vercel/node"
+    }
+  ],
   "installCommand": "npm ci"
 }
