--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "--build": "rimraf dist && tsc",
-    "--start:build": "node --enable-source-maps dist/server.js",
+    "build": "rimraf dist && tsc",
+    "start:build": "node --enable-source-maps dist/server.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
