--- a/api/vercel.json
+++ b/api/vercel.json
@@ -11,5 +11,6 @@
       "use": "@vercel/node"
     }
   ],
-  "installCommand": "npm ci"
+  "installCommand": "npm ci",
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./api/"
 }
