--- a/api/vercel.json
+++ b/api/vercel.json
@@ -12,5 +12,5 @@
     }
   ],
   "installCommand": "npm ci",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./api/"
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./api"
 }
