--- a/api/vercel.json
+++ b/api/vercel.json
@@ -11,6 +11,5 @@
       "use": "@vercel/node"
     }
   ],
-  "installCommand": "npm ci",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./api"
+  "installCommand": "npm ci"
 }
