--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.0",
-    "sequelize": "^6.25.7"
+    "passport": "^0.6.0",
+    "passport-http-bearer": "^1.0.1",
+    "sequelize": "^6.25.7",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
